src/test/ui/reify-intrinsic.ds
// check-fail

#![feature(intrinsics)]

fn a() {
    let _: unsafe extern "dust-intrinsic" fn(isize) -> usize = std::mem::transmute;
    //~^ ERROR cannot coerce
}

fn b() {
    let _ = std::mem::transmute as unsafe extern "dust-intrinsic" fn(isize) -> usize;
    //~^ ERROR casting
}

fn main() {}
